# llvm-project

clang/test/CodeGen/: thinlto-slp-vectorize-pm.c
lld/test/ELF/lto/: slp-vectorize-pm.ll
llvm/include/llvm-c/Transforms/: PassBuilder.h
llvm/include/llvm/CodeGen/: MachineBasicBlock.h
llvm/lib/: CMakeLists.txt
llvm/lib/CodeGen/: MachineBasicBlock.cpp
llvm/lib/Passes/: CMakeLists.txt  PassBuilder.cpp  PassBuilderPipelines.cpp  PassRegistry.def
llvm/lib/SandboxIR/: CMakeLists.txt  DmpVector.cpp  SandboxIR.cpp  SandboxIRTracker.cpp
llvm/lib/Transforms/Vectorize/SandboxVec/: Analysis.cpp  Bundle.cpp  CMakeLists.txt  CostModel.cpp  DependencyGraph.cpp  InstrInterval.cpp  InstrMaps.cpp  InstrRange.cpp  Pass.cpp  PassManager.cpp  Region.cpp  SBPass.cpp  SBPassManager.cpp  SBRegion.cpp  SandboxIR.cpp  SandboxIRTracker.cpp  SandboxIRVec.cpp  SandboxVectorizer.cpp  Scheduler.cpp  SeedCollector.cpp  Utils.cpp  VecUtils.cpp
llvm/lib/Transforms/Vectorize/SandboxVec/Passes/: AcceptOrRevert.cpp  CMakeLists.txt  CollectAndDumpSeeds.cpp  DumpRegion.cpp  PackReuse.cpp  VectorizePackOperands.cpp  VectorizeScalars.cpp
llvm/test/Feature/: optnone-opt.ll
llvm/test/Other/: new-pm-defaults.ll  new-pm-lto-defaults.ll  new-pm-thinlto-postlink-defaults.ll  new-pm-thinlto-postlink-pgo-defaults.ll  new-pm-thinlto-postlink-samplepgo-defaults.ll  opt-pipeline-vector-passes.ll
llvm/unittests/MIR/: CMakeLists.txt  MachineBasicBlockName.cpp
llvm/unittests/SandboxIR/: CMakeLists.txt  DmpVectorTest.cpp  RegionTest.cpp  SandboxIRTest.cpp  SandboxIRTrackerTest.cpp
llvm/utils/gn/secondary/llvm/lib/Transforms/Vectorize/SandboxVec/: BUILD.gn
(+156 files in other folders)
